2014-05-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGSLExample/DESCRIPTION: Updated
	* inst/examples/RcppGSLExample/NAMESPACE: Ditto
	* inst/examples/RcppGSLExample/configure.ac: Ditto
	* inst/examples/RcppGSLExample/configure: Ditto
	* inst/examples/RcppGSLExample/src/Makevars.in: Ditto
	* inst/examples/RcppGSLExample/src/Makevars.win: Ditto

2014-05-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Updated for Rcpp (>= 0.11.0)
	* NAMESPACE: Ditto

	* configure.ac: Simplified as we longer need -L flags for Rcpp
	* src/Makevars.in: Ditto
	* src/Makevars.win (PKG_LIBS): Removed call to Rcpp:::LdFlags()

	* R/inline.R (inlineCxxPlugin): Now call Rcpp::Rcpp.plugin.maker()

	* .Rbuildignore: Added

2013-10-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Added 'Suggests: Rcpp' to build vignette as we call
	into Rcpp to get its bibtex file

2013-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* NAMESPACE: Export LdFlags and CFlags
	* man/LdFlags.Rd: Added documentation for exported functions

2013-09-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Imports): Now 'Imports: Rcpp' rather than Depends: to
	satisfy R CMD check for the R version under development

2013-08-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Added 'highlight' so that the package is
	available during 'R CMD check' in order to build vignettes

	* vignettes/RcppGSL-intro.Rnw: Also cite the Eddelbuettel and
	Sanderson (2013, CSDA) paper on RcppArmadillo

2013-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.gsl.R: Corrections to new unitTest scheme
	* inst/unitTests/cpp/gsl.cpp: Idem

2013-06-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runit.gsl.R: Rewritten to use sourceCpp()

	* inst/unitTests/cpp/gsl.cpp: New C++ file with unit tests

 	* vignettes/RcppGSL-unitTests.Rnw: Minor tweaking

	* vignettes/RcppGSL-intro.Rnw: Added section on attributes
